Enforce prefixes "a/" and "b/" when doing git diff

The user can set different prefix using diff.mnemonicprefix or
diff.noprefix (see git-config(1)), so we need to force them to the
values that the diffeditor and PatchTool expect.

Task-number: QTCREATORBUG-13782
Change-Id: I3110a34b2575b89abe840e040690f3f0c36e955b
Reviewed-by: Orgad Shaneh <orgads@gmail.com>